syntax = "proto3";

package cart;

option go_package = "./api/cart-service";

message CartItem {
    int32 product_id = 1;
    int32 quantity = 2;
}

message AddItemRequest {
    int32 user_id = 1;
    int32 product_id = 2;
    int32 quantity = 3;
}

message AddItemResponse {
    bool success = 1;
    string message = 2;
}

message RemoveItemRequest {
    int32 user_id = 1;
    int32 product_id = 2;
}

message RemoveItemResponse {
    bool success = 1;
    string message = 2;
}

message GetCartRequest {
    int32 user_id = 1;
}

message GetCartResponse {
    repeated CartItem items = 1;
}

service CartService {
    rpc AddItem(AddItemRequest) returns (AddItemResponse);
    rpc RemoveItem(RemoveItemRequest) returns (RemoveItemResponse);
    rpc GetCart(GetCartRequest) returns (GetCartResponse);
}